2006-05-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-register-file-name-handlers): Enable Tramp
	completion also when ido is loaded.

2006-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-file-name-handler-alist)
	(tramp-run-real-handler, tramp-completion-run-real-handler)
	(tramp-completion-handle-file-name-all-completions)
	(tramp-completion-handle-file-name-completion): Autoload them.
	(tramp-handle-file-name-directory): Return the real directory
	name.  Returning "/" only doesn't need to be necessary any longer.
	(tramp-file-name-handler): Make special attention when in hostname
	completion mode.
	(tramp-register-file-name-handlers): That's a defsubst now.  Code
	from `tramp-repair-jka-compr' moved here.  Register
	`tramp-completion-file-name-handler' only when
	`partial-completion-mode' is enabled.
	(tramp-repair-jka-compr)
	(tramp-completion-handle-file-exists-p)
	(tramp-completion-handle-file-name-directory)
	(tramp-completion-handle-file-name-nondirectory)
	(tramp-completion-handle-expand-file-name): Remove them.
	(tramp-completion-handle-file-name-all-completions):
	Delete directory part from results.
	(tramp-get-completion-methods, tramp-get-completion-user-host):
	Discard deleting "/", it doesn't work after the change of
	`tramp-handle-file-name-directory' above.

2006-04-29  Richard Stallman  <rms@gnu.org>

	* tramp.el (tramp-completion-file-name-handler-alist): Delete
	expand-file-name and other operations that can cause spurious loading.

2006-04-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-auto-save-file-name): For Emacs 21,
	set `tramp-auto-save-directory' if unset in order to guarantee
	unique auto-save file names.
	(tramp-register-file-name-handlers): New defun.  Added with
	autoload cookie.
	(tramp-unload-file-name-handlers): Renamed from
	`tramp-unload-file-name-handler-alist'.

2006-04-17  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.53 released.
