@@ -1,3 +1,10 @@
+2006-05-28  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-register-file-name-handlers):
+	`partial-completion-mode' is unknown to XEmacs.
+	(tramp-time-diff): Don't use `floor', it might fail for large
+	differences.
+
 2006-05-09  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-register-file-name-handlers): Enable Tramp
